remove base bath
