# handler/http_hdl/swagger_docs/restricted_docs.go
@@ -784,40 +784,16 @@ const docTemplaterestricted = `{
         "time.Duration": {
             "type": "integer",
             "enum": [
-                -9223372036854775808,
-                9223372036854775807,
                 1,
                 1000,
                 1000000,
-                1000000000,
-                60000000000,
-                3600000000000,
-                -9223372036854775808,
-                9223372036854775807,
-                1,
-                1000,
-                1000000,
-                1000000000,
-                60000000000,
-                3600000000000
+                1000000000
             ],
             "x-enum-varnames": [
-                "minDuration",
-                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
-                "Second",
-                "Minute",
-                "Hour",
-                "minDuration",
-                "maxDuration",
-                "Nanosecond",
-                "Microsecond",
-                "Millisecond",
-                "Second",
-                "Minute",
-                "Hour"
+                "Second"
             ]
         }
     }
@@ -827,7 +803,7 @@ const docTemplaterestricted = `{
 var SwaggerInforestricted = &swag.Spec{
 	Version:          "0.8.2",
 	Host:             "",
-	BasePath:         "/restricted",
+	BasePath:         "/",
 	Schemes:          []string{},
 	Title:            "Core Manager restricted API",
 	Description:      "Provides access to selected management functions for the multi-gateway core.",
